# virtual-experts

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-time-expert.yml  ci-virtual-expert.yml  publish-time-expert.yml  publish-virtual-expert.yml
docs/: CREATING_VIRTUAL_EXPERTS.md
examples/: cot_dispatch_demo.py  cot_llm_demo.py  lazarus_integration.py  test_lazarus.py  validate_expert.py
scripts/: debug_cot_rewriter.py  debug_routing.py  test_lazarus_cot_integration.py
